crates/parser/tests/snapshots/block_string/nested_indent.snap
---
source: crates/parser/tests/snapshots_block_string.rs
---
# block_string/nested_indent

## Input

```
  key |
    line1
    line2

```

## CST

```
SOURCE_FILE@0..28
  SPACE@0..2 "  "
  ENTRY@2..27
    WORD_KEY@2..5
      WORD@2..5 "key"
    SPACE@5..6 " "
    BLOCK_STRING@6..27
      BLOCK_STRING_HEADER@6..8
        PIPE@6..7 "|"
        NEWLINE@7..8 "\n"
      SPACE@8..12 "    "
      LINE_STRING@12..17
        STRING@12..17 "line1"
      NEWLINE@17..18 "\n"
      SPACE@18..22 "    "
      LINE_STRING@22..27
        STRING@22..27 "line2"
  NEWLINE@27..28 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@2..5 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@6..7 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@12..17 "line1",
                    },
                    LineString {
                        string: STRING@22..27 "line2",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
